<?xml version="1.0" encoding="utf-8"?>
<!-- Layout taken and adapted from http://classes.engr.oregonstate.edu/eecs/spring2018/cs496/module-6/views.html -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="matt.propertytracker.UserOptionsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50sp" >

        <TextView
            android:text="@string/user_options_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/UserOptionsTitle1"
            android:layout_weight="1"
            android:textSize="24sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="20sp" >

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="10sp"
            android:id="@+id/Spacer1"
            android:layout_weight="1"
            android:textSize="10sp"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PropertyListButton1"
        android:text="@string/user_option_button_label1"
        android:textSize="@dimen/button_font_size"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LogoutButton1"
        android:text="@string/user_option_button_label2"
        android:textSize="@dimen/button_font_size"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditAccountButton1"
        android:text="@string/user_option_button_label3"
        android:textSize="@dimen/button_font_size"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80sp" >

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Spacer2"
            android:layout_weight="1"
            android:textSize="26sp"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DeleteAccountButton1"
        android:text="@string/user_option_button_label4"
        android:textSize="@dimen/button_font_size"/>

</LinearLayout>