<?xml version="1.0" encoding="utf-8"?>
<!-- Layout taken and adapted from http://classes.engr.oregonstate.edu/eecs/spring2018/cs496/module-6/views.html -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="matt.propertytracker.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45sp" >

        <TextView
            android:text="@string/login_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:textSize="22sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45sp" >

        <TextView
            android:text="@string/submit_text_one"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:layout_weight="0.63"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LoginInput1"
            android:layout_weight="1"
            android:textSize="22sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45sp" >

        <TextView
            android:text="@string/submit_text_two"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:id="@+id/textView3"
            android:layout_weight="0.63"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LoginInput2"
            android:layout_weight="1"
            android:textSize="22sp"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LoginButton1"
        android:text="@string/signup_button_label"
        android:textSize="@dimen/button_font_size"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NewUserSignupButton1"
        android:text="@string/new_user_signup_button_label"
        android:textSize="@dimen/button_font_size"/>

</LinearLayout>