<?xml version="1.0" encoding="utf-8"?>
<!-- Layout taken and adapted from http://classes.engr.oregonstate.edu/eecs/spring2018/cs496/module-6/views.html -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="matt.propertytracker.EditAccountActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45sp" >

        <TextView
            android:text="@string/edit_account_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:textSize="22sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45sp" >

        <TextView
            android:text="@string/submit_text_three"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:id="@+id/textView4"
            android:layout_weight="0.63"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditUserInput1"
            android:layout_weight="1"
            android:textSize="22sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45sp" >

        <TextView
            android:text="@string/submit_text_four"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:id="@+id/textView5"
            android:layout_weight="0.63"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditUserInput2"
            android:layout_weight="1"
            android:textSize="22sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45sp" >

        <TextView
            android:text="@string/submit_text_five"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:id="@+id/textView6"
            android:layout_weight="0.63"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditUserInput3"
            android:layout_weight="1"
            android:textSize="22sp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45sp" >

        <TextView
            android:text="@string/submit_text_six"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:id="@+id/textView7"
            android:layout_weight="0.63"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditUserInput4"
            android:layout_weight="1"
            android:textSize="22sp"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/EditButton1"
        android:text="@string/user_button_label"
        android:textSize="@dimen/button_font_size"/>

</LinearLayout>
